packages/cli/source/src/commands/source/push/__snapshots__/add.spec.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`source:push:add when the batch upload fails returns an information message on add failure from the API 1`] = `
"Error while trying to add document.

Status code: 412
Error code: [31mBAD_REQUEST[39m
Message: [31mthis is a bad request and you should feel bad[39m
Request ID: [31mundefined[39m"
`;

exports[`source:push:add when the batch upload is successful throws when no flags are specified 1`] = `"You must set the \`files\` flag. Use \`source:push:add --help\` to get more information."`;

exports[`source:push:add when the batch upload is successful when uploading 1 documents should print the appropriate # of documents 1`] = `
"Success: 1 document accepted by the Push API from filename0.Status code: 202 👌
    
"
`;

exports[`source:push:add when the batch upload is successful when uploading 2 documents should print the appropriate # of documents 1`] = `
"Success: 2 documents accepted by the Push API from filename0, filename1.Status code: 202 👌
    
"
`;

exports[`source:push:add when the batch upload is successful when uploading 3 documents should print the appropriate # of documents 1`] = `
"Success: 3 documents accepted by the Push API from filename0, filename1, filename2.Status code: 202 👌
    
"
`;

exports[`source:push:add when the batch upload is successful when uploading 4 documents should print the appropriate # of documents 1`] = `
"Success: 4 documents accepted by the Push API from filename0, filename1, filename2, filename3.Status code: 202 👌
    
"
`;

exports[`source:push:add when the batch upload is successful when uploading 5 documents should print the appropriate # of documents 1`] = `
"Success: 5 documents accepted by the Push API from filename0, filename1, filename2, filename3, filename4.Status code: 202 👌
    
"
`;

exports[`source:push:add when the batch upload is successful when uploading 6 documents should print the appropriate # of documents 1`] = `
"Success: 6 documents accepted by the Push API from filename0, filename1, filename2, filename3, filename4 and 1 more ....Status code: 202 👌
    
"
`;

exports[`source:push:add when the batch upload is successful when using the -d flag should output feedback message when uploading documents 1`] = `
"  console.error
     ›   Warning: Use the \`files\` flag instead

      142 |     const {flags} = await this.parse(SourcePushAdd);
      143 |     if (flags.file || flags.folder) {
    > 144 |       CliUx.ux.warn('Use the \`files\` flag instead');
          |                ^
      145 |     }
      146 |   }
      147 |

      at Object.warn (../../../node_modules/@oclif/core/lib/errors/index.js:59:13)
      at SourcePushAdd.warn [as showDeprecatedFlagWarning] (src/commands/source/push/add.ts:144:16)
      at SourcePushAdd.run (src/commands/source/push/add.ts:76:5)
      at SourcePushAdd._run (../../../node_modules/@oclif/core/lib/command.js:81:22)
      at Config.runCommand (../../../node_modules/@oclif/core/lib/config/config.js:272:25)
      at Object.run (../../../node_modules/@oclif/test/lib/command.js:21:13)
      at Object.run (../../../node_modules/fancy-test/lib/base.js:68:25)

Success: 2 documents accepted by the Push API from filename0, filename1.Status code: 202 👌
    
"
`;

exports[`source:push:add when the batch upload is successful when using the -d flag should show deprecated flag warning 1`] = `
"  console.error
     ›   Warning: Use the \`files\` flag instead

      142 |     const {flags} = await this.parse(SourcePushAdd);
      143 |     if (flags.file || flags.folder) {
    > 144 |       CliUx.ux.warn('Use the \`files\` flag instead');
          |                ^
      145 |     }
      146 |   }
      147 |

      at Object.warn (../../../node_modules/@oclif/core/lib/errors/index.js:59:13)
      at SourcePushAdd.warn [as showDeprecatedFlagWarning] (src/commands/source/push/add.ts:144:16)
      at SourcePushAdd.run (src/commands/source/push/add.ts:76:5)
      at SourcePushAdd._run (../../../node_modules/@oclif/core/lib/command.js:81:22)
      at Config.runCommand (../../../node_modules/@oclif/core/lib/config/config.js:272:25)
      at Object.run (../../../node_modules/@oclif/test/lib/command.js:21:13)
      at Object.run (../../../node_modules/fancy-test/lib/base.js:68:25)

Success: 2 documents accepted by the Push API from filename0, filename1.Status code: 202 👌
    
"
`;
